# azureland

./: .hgignore  README.md
libs/yaml-cpp/: CMakeLists.txt
libs/yaml-cpp/test/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  run-tests.vcxproj  run-tests.vcxproj.filters
libs/yaml-cpp/util/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  parse.vcxproj  (+8 more)
proj/: CMakeLists.txt  crimsonland.sln  crimsonland.vcxproj  crimsonland.vcxproj.filters
src/: .clang-format  CMakeLists.txt  README.md  aabb.cpp  aabb.h  aabb_int.cpp  aabb_int.h  app.cpp  app.h  axis_getter.cpp  axis_getter.h  build_game.cpp  build_game.h  camera.cpp  camera.h  collider.cpp  collider.h  collision.cpp  collision.h  collision_detail.cpp  collision_detail.h  collision_typedefs.h  container_helpers.h  cri_aabb.cpp  cri_aabb.h  cri_aabb_int.cpp  cri_aabb_int.h  cri_app.cpp  cri_app.h  cri_axis_getter.cpp  cri_axis_getter.h  cri_build_game.cpp  cri_build_game.h  cri_camera.cpp  cri_camera.h  cri_collider.cpp  cri_collider.h  cri_collision.cpp  cri_collision.h  cri_collision_detail.cpp  (+104 more)
src/weapons/: cri_crossbow.cpp  cri_crossbow.h  cri_forcefield.cpp  cri_forcefield.h  cri_forcefield_emitter.cpp  cri_forcefield_emitter.h  cri_reload.cpp  cri_reload.h  cri_weapon.cpp  cri_weapon.h  cri_weapon_helpers.cpp  cri_weapon_helpers.h  crossbow.cpp  crossbow.h  forcefield.cpp  forcefield.h  forcefield_emitter.cpp  forcefield_emitter.h  reload.cpp  reload.h  weapon.cpp  weapon.h  weapon_helpers.cpp  weapon_helpers.h
(+205 files in other folders)
